[package]
name = "test_program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls-platform-verifier = {version = "0.1", path = "D:\\khang_rustls-platform-verifier"}
rustls-cng = {version = "0.3", path = "D:\\rustls-cng"}
rustls = { version = "0.21", features = ["dangerous_configuration", "tls12", "logging"] }
docopt = "~1.1"
env_logger = "0.9.0" # 0.10 requires an MSRV bump to 1.60
log = { version = "0.4.4", optional = true }
mio = { version = "0.8", features = ["net", "os-poll"] }
rustls-pemfile = "1.0.0"
sct = "0.7"
serde = "1.0"
serde_derive = "1.0"
webpki-roots = "0.22"
anyhow = "1"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-manual-roots"] }
