[package]
name = "test_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = {version = "0.2.11", path = "D:\\rust\\pfx_leak\\rust-native-tls"}
ctrlc = { version = "3.0", features = ["termination"] }
